Make search results go thru XSLT too
One step color to removing color computation and complex HTML
formatting from C.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ yelp
 /data/dtd/catalog
 /data/xslt/db2html.xsl
 /data/xslt/info2html.xsl
+/data/xslt/links2html.xsl
 /data/xslt/mal2html.xsl
 /data/xslt/man2html.xsl
 /data/xslt/yelp-common.xsl
