--- a/data/yelp.appdata.xml.in
+++ b/data/yelp.appdata.xml.in
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
+  <releases>
+    <release version="40" timestamp="2020-03-20"/>
+  </releases>
   <id>yelp.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
@@ -22,6 +25,7 @@
   <screenshots>
     <screenshot type="default">https://wiki.gnome.org/Apps/Yelp?action=AttachFile&amp;do=get&amp;target=yelp_screenshot.png</screenshot>
   </screenshots>
+  <content_rating type="oars-1.1" />
   <url type="homepage">https://wiki.gnome.org/Apps/Yelp</url>
   <updatecontact>gnome-doc-devel-list@gnome.org</updatecontact>
   <project_group>GNOME</project_group>
